update: wofi, default font and themes

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     /* `otf-font-awesome` is required to be installed for icons */
     /* font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif; */
-    font-family: FontAwesome, Ubuntu Mono, sans-serif;
+    font-family: FontAwesome, Ubuntu, sans-serif;
         border: none;
         border-radius: 12px;
         font-size: 14px;
